src/tui/snapshots/codecoder__tui__render__snapshot_tests__popup_file.snap
---
source: src/tui/render.rs
expression: snap
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"┌────────────┐                                                                  "
"│ @notes.txt │                                                                  "
"└────────────┘                                                                  "
"› edit @not                                                                     "
" SLASH  m  ctx 0%  · ^J newline · ↑ browse · / cmd · ^C quit                    "
