src/tui/snapshots/codecoder__tui__render__snapshot_tests__popup_slash.snap
---
source: src/tui/render.rs
expression: snap
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"┌─────────┐                                                                     "
"│ /resume │                                                                     "
"│ /reload │                                                                     "
"└─────────┘                                                                     "
"› /re                                                                           "
" SLASH  m  ctx 0%  · ^J newline · ↑ browse · / cmd · ^C quit                    "
