src/tui/snapshots/codecoder__tui__render__snapshot_tests__search_active.snap
---
source: src/tui/render.rs
expression: snap
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"search> test                                                                    "
" SEARCH  m  ctx 0%  · ^J newline · ↑ browse · / cmd · ^C quit                   "
