src/tui/snapshots/codecoder__tui__render__snapshot_tests__search_reverse.snap
---
source: src/tui/render.rs
expression: snap
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"r-search> test                                                                  "
" R-SEARCH  m  ctx 0%  · ^J newline · ↑ browse · / cmd · ^C quit                 "
