src/tui/snapshots/codecoder__tui__render__snapshot_tests__transcript_empty.snap
---
source: src/tui/render.rs
expression: snap
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"› type a message, or / for commands                                             "
" INSERT  m  ctx 0%  · ^J newline · ↑ browse · / cmd · ^C quit                   "
