src/tui/snapshots/codecoder__tui__render__snapshot_tests__transcript_mixed_blocks.snap
---
source: src/tui/render.rs
expression: snap
---
"you › explain the code                                                          "
"                                                                                "
"  ▸ reasoning (1 lines)                                                         "
"                                                                                "
"cc  · Here is the analysis:                                                     "
"      The code does X.                                                          "
"                                                                                "
"  ▪ read_file  src/main.rs                                                      "
"    └ fn main() {}                                                              "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"› type a message, or / for commands                                             "
" INSERT  m  ctx 0%  · ^J newline · ↑ browse · / cmd · ^C quit                   "
