src/tui/snapshots/codecoder__tui__render__snapshot_tests__transcript_tool_long_folded.snap
---
source: src/tui/render.rs
expression: snap
---
"  ▪ run_command  cargo test                                                     "
"    └ line 0 · 15 lines ▸                                                       "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"› type a message, or / for commands                                             "
" INSERT  m  ctx 0%  · ^J newline · ↑ browse · / cmd · ^C quit                   "
