src/tui/snapshots/codecoder__tui__render__snapshot_tests__transcript_tool_no_result.snap
---
source: src/tui/render.rs
expression: snap
---
"  ▪ read_file  src/main.rs                                                      "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"› type a message, or / for commands                                             "
" INSERT  m  ctx 0%  · ^J newline · ↑ browse · / cmd · ^C quit                   "
